--- a/semana1/aula6/comprar.html
+++ b/semana1/aula6/comprar.html
@@ -43,7 +43,7 @@
             </tr>
         </table>
     </div>
-    <div>
+    <div id="div-button">
         <button id="back-button" > <a href="./home.html"> VOLTAR </a>  </button>
     </div>
 </body>
