Coloquei numeração na lista da home

--- a/semana1/aula6/home.html
+++ b/semana1/aula6/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>For Ever 4</title>
-    
+
 </head>
 
 <body>
@@ -18,10 +18,12 @@
             <div id="frase-inicial">
                 <p> Somos uma empresa focada em tornar a compra de roupas mais fácil </p>
             </div>
-            <ol>
-                <li> Ache os melhores descontos </li>
-                <li> Busque pelos seus gostos</li>
-            </ol>
+            <div id="div-lista">
+                <ol>
+                    <li> Ache os melhores descontos </li>
+                    <li> Busque pelos seus gostos</li>
+                </ol>
+            </div>
             <h3> Realize seus sonhos conosco</h3>
         </div>
 
