foi adicionado o css do index, e retirei algumas coisas do index

--- a/semana1/projeto-portfólio/index.html
+++ b/semana1/projeto-portfólio/index.html
@@ -9,52 +9,62 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600;800&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <a href="index.html">Home</a>
-        <a href="sobre-mim.html">Sobre</a>
-        <a href="experiencias.html">Experiências</a>
-        <a href="projetos.html">Projetos</a>
-        <a href="contato.html/">Contato</a>
-<p></p>
-        <img src="" alt="Linkedin">
-        <img src="" alt="Facebook">
-        <img src="" alt="GitHub">
+        <span>
+            <a href="index.html">Home</a>
+            <a href="sobre-mim.html">Sobre</a>
+            <a href="experiencias.html">Experiências</a>
+            <a href="projetos.html">Projetos</a>
+            <a href="contato.html/">Contato</a>
+        </span>
+        <picture>
+            <img src="./imagens/linkedin.png" alt="Linkedin">
+            <img src="./imagens/facebook.png" alt="Facebook">
+            <img src="./imagens/github.png" alt="GitHub">
+        </picture>
     </header>
 
     <main>
-        <p>&lt;body&gt;</p>
-
-        <div>
-            &lt;div&gt;
-            &lt;/div&gt;
-        </div>
-
-        <p>&lt;h1&gt;</p>
-
-        <h1>Olá, Sou a Adryane</h1>
-        <h2>DESENVOLVEDORA FRONT-END</h2>
-
-        <p>&lt;/h1&gt;</p>
-
-        <button>SOBRE MIM</button>
-
-        <div>
-            <p>h1{</p>
-            <p>  color: with</p>
-            <p>  font-family: arial;</p>
-            <p>}</p>
-        </div>
 
 
-        <p>&lt;/body&gt;</p>
-        <p>&lt;/hmtl&gt;</p>
+        <!-- <div class="fundo-direito">
+            <p>&lt;div&gt;</p>
+            <p>&lt;/div&gt;</p> 
+        </div> -->
+        <p class="tags">&lt;body&gt;</p>
+
+        <section>
+            <p class="tags" id="tag-h1">&lt;h1&gt;</p>
+
+            <h1>
+                <p>Olá,</p>
+                <p>Sou a</p>
+                <p>Adryane</p>
+            </h1>
+            <span class="tags">&lt;/h1&gt;</span>
+            <h2>DESENVOLVEDORA FRONT-END</h2>
+            <div>
+                <a href="sobre-mim.html"><button id="botao-index">SOBRE MIM</button></a>
+            </div>
+        </section>
+
+        <picture>
+            <img id="avatar-index" src="./imagens/boneca-home.png" alt="Avatar de sorrido e com a mão levantada">
+        </picture>
+
+
+
+
+        <p class="tags">&lt;/body&gt;</p>
+        <p class="tags">&lt;/hmtl&gt;</p> 
     </main>
 
     <footer>
-
+        <p>rodapé</p>
     </footer>
 </body>
 
