Adicionei as informações no sobre-mim.html

--- a/semana1/projeto-portfólio/index.html
+++ b/semana1/projeto-portfólio/index.html
@@ -22,19 +22,19 @@
             <a href="contato.html/">Contato</a>
         </span>
         <picture>
-            <img src="./imagens/linkedin.png" alt="Linkedin">
-            <img src="./imagens/facebook.png" alt="Facebook">
-            <img src="./imagens/github.png" alt="GitHub">
+            <a href="http://www.linkedin.com/in/adryane-fernandes-146ba01bb/" target="_blank" rel="noopener noreferrer">
+                <img src="./imagens/linkedin.png" alt="Linkedin">
+            </a>
+            <a href="https://github.com/adryanefernandes" target="_blank" rel="noopener noreferrer">
+                <img src="./imagens/facebook.png" alt="Facebook">
+            </a>
+            <a href="https://www.facebook.com/adryane.cristine" target="_blank" rel="noopener noreferrer">
+                <img src="./imagens/github.png" alt="GitHub">
+            </a>
         </picture>
     </header>
 
     <main>
-
-
-        <!-- <div class="fundo-direito">
-            <p>&lt;div&gt;</p>
-            <p>&lt;/div&gt;</p> 
-        </div> -->
         <p class="tags">&lt;body&gt;</p>
 
         <section>
