Adicionei as informações no contato.html e mexi no css dele e do sobre-mim.html

--- a/semana1/projeto-portfólio/index.html
+++ b/semana1/projeto-portfólio/index.html
@@ -19,7 +19,7 @@
             <a href="sobre-mim.html">Sobre</a>
             <a href="experiencias.html">Experiências</a>
             <a href="projetos.html">Projetos</a>
-            <a href="contato.html/">Contato</a>
+            <a href="contato.html">Contato</a>
         </span>
         <picture>
             <a href="http://www.linkedin.com/in/adryane-fernandes-146ba01bb/" target="_blank" rel="noopener noreferrer">
