--- a/semana1/projeto-portfólio/sobre-mim.html
+++ b/semana1/projeto-portfólio/sobre-mim.html
@@ -18,7 +18,7 @@
             <a href="index.html">Home</a>
             <a href="experiencias.html">Experiências</a>
             <a href="projetos.html">Projetos</a>
-            <a href="contato.html/">Contato</a>
+            <a href="contato.html">Contato</a>
         </span>
         <picture>
             <a href="http://www.linkedin.com/in/adryane-fernandes-146ba01bb/" target="_blank" rel="noopener noreferrer">
@@ -38,9 +38,7 @@
             <img id="minha-foto" src="./imagens/minha-foto.jpeg" alt="">
 
             <p id="texto-sobre-mim">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus atque adipisci placeat. Ullam
-                dignissimos molestias possimus, facilis ex itaque quae officiis id nobis, voluptas quod temporibus
-                velit, ea ipsa molestiae!
+                Insert text here
             </p>
         </section>
     </main>
