--- a/semana1/projeto-portfólio/sobre-mim.html
+++ b/semana1/projeto-portfólio/sobre-mim.html
@@ -34,12 +34,17 @@
     </header>
 
     <main>
-        <section id="section-sobre-mim">
-            <img id="minha-foto" src="./imagens/minha-foto.jpeg" alt="">
 
-            <p id="texto-sobre-mim">
-                Insert text here
-            </p>
+        <section>
+            <img id="minha-foto" src="./imagens/minha-foto.jpeg" alt="">
+            <div id="topo-pag">
+                <p>Um pouco sobre mim </p>
+            </div>
+        </section>
+        <section id="section-sobre-mim">
+            <div id="hobbies">
+                <img src="" alt="icone de hobbies">
+            </div>
         </section>
     </main>
 
