Alteração no visual do index e mudei o sobre-mim

--- a/semana1/projeto-portfólio/sobre-mim.html
+++ b/semana1/projeto-portfólio/sobre-mim.html
@@ -38,14 +38,45 @@
         <section>
             <img id="minha-foto" src="./imagens/minha-foto.jpeg" alt="">
             <div id="topo-pag">
-                <p>Um pouco sobre mim </p>
+                <p> Soft e Hardskills </p>
             </div>
         </section>
-        <section id="section-sobre-mim">
-            <div id="hobbies">
-                <img src="" alt="icone de hobbies">
-            </div>
-        </section>
+        <div id="section-sobre-mim">
+            <table>
+                <thead>
+                    <tr>
+
+                        <th>
+                            <img src="./imagens/icon-hardskills.png" alt="icone de hardskills">
+                        </th>
+                        <th>
+                            <img src="./imagens/icon-softskills.png" alt="icone de softskills">
+                        </th>
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>coisas</li>
+                                <li>que</li>
+                                <li>vou add</li>
+                                <li>dps</li>
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>coisas</li>
+                                <li>que</li>
+                                <li>vou add</li>
+                                <li>dps</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer>
