Desginer do sobre-mim.html completo

--- a/semana1/projeto-portfólio/index.html
+++ b/semana1/projeto-portfólio/index.html
@@ -67,7 +67,7 @@
             <p>}</p>
         </div>
 
-        <p class="tags" id="tag1">&lt;body&gt;</p>
+        <p class="tags" id="tagbody">&lt;body&gt;</p>
         <section>
             <p class="tags" id="tag-h1">&lt;h1&gt;</p>
 
@@ -77,7 +77,7 @@
                 <p>Adryane</p>
             </h1>
             <span class="tags">&lt;/h1&gt;</span>
-            <h2>DESENVOLVEDORA FRONT-END</h2>
+            <h2 id="subtitulo">DESENVOLVEDORA FRONT-END</h2>
             <div>
                 <a href="sobre-mim.html"><button id="botao-index">SOBRE MIM</button></a>
             </div>
@@ -90,8 +90,8 @@
 
 
 
-        <p class="tags" id="tag4">&lt;/body&gt;</p>
-        <p class="tags">&lt;/hmtl&gt;</p>
+        <p class="tags" id="tagfbody">&lt;/body&gt;</p>
+        <p class="tags" id="tagfhtml">&lt;/hmtl&gt;</p>
     </main>
 
     <footer>
