--- a/semana1/projeto-portfólio/sobre-mim.html
+++ b/semana1/projeto-portfólio/sobre-mim.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body id="body-sobre-mim">
     <header>
         <span>
             <a href="index.html">Home</a>
@@ -34,49 +34,27 @@
     </header>
 
     <main>
+        <section id="sobre-mim">
 
-        <section>
-            <img id="minha-foto" src="./imagens/minha-foto.jpeg" alt="">
-            <div id="topo-pag">
-                <p> Soft e Hardskills </p>
-            </div>
+            <h2>
+                <p class="tags" id="tagsh2">&lt;h2&gt;</p>
+                Sobre mim
+
+
+            </h2>
+            <p class="tags" id="tagsfh2">&lt;/h2&gt;</p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore repellendus suscipit modi quod natus
+                earum recusandae. Error, culpa possimus! Necessitatibus molestiae quasi esse iusto veniam voluptates
+                adipisci maiores sint beatae!
+            </p>
         </section>
-        <div id="section-sobre-mim">
-            <table>
-                <thead>
-                    <tr>
+        <section>
+            <p class="tags" id="tagimg">&lt;img&gt;</p>
+            <img id="minha-foto" src="./imagens/minha-foto.png" alt="foto da adryane">
+            <p class="tags" id="tagfimg">&lt;/img&gt;</p>
+        </section>
 
-                        <th>
-                            <img src="./imagens/icon-hardskills.png" alt="icone de hardskills">
-                        </th>
-                        <th>
-                            <img src="./imagens/icon-softskills.png" alt="icone de softskills">
-                        </th>
-
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>
-                            <ul>
-                                <li>coisas</li>
-                                <li>que</li>
-                                <li>vou add</li>
-                                <li>dps</li>
-                            </ul>
-                        </td>
-                        <td>
-                            <ul>
-                                <li>coisas</li>
-                                <li>que</li>
-                                <li>vou add</li>
-                                <li>dps</li>
-                            </ul>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
     </main>
 
     <footer>
