finalizei a página de projetos

--- a/semana1/projeto-portfólio/projetos.html
+++ b/semana1/projeto-portfólio/projetos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <span>
@@ -32,11 +34,20 @@
     </header>
 
     <main>
-
+        <section id="titulo-proj">
+            <p class="tags tags-proj">&lt;h1&gt;</p>
+            <h1>Projetos</h1>
+            <p class="tags tags-proj"">&lt;/h1&gt;</p>
+        </section>
+        <figure id="projetos">
+                <a href="./dev-finances.html"> <img src="./imagens/logo-devfinances.jpg" alt="logo dev ficances"></a>
+                <a href="./bodados-de-amor.html"> <img src="./imagens/logo-bordadosdeamor.jpg" alt=""></a>
+        </figure>
     </main>
 
     <footer>
         <p>rodapé</p>
     </footer>
 </body>
+
 </html>
