Terminei a página do projeto dev.finances

--- a/semana1/projeto-portfólio/index.html
+++ b/semana1/projeto-portfólio/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <p class="tags" id="tagbody">&lt;body&gt;</p>
-        <section>
+        <section id="section-index">
             <p class="tags" id="tag-h1">&lt;h1&gt;</p>
 
             <h1>
@@ -94,7 +94,7 @@
         <p class="tags" id="tagfhtml">&lt;/hmtl&gt;</p>
     </main>
 
-    <footer>
+    <footer class="fixo">
         <p>rodapé</p>
     </footer>
 
