Página de bordados de amor terminada

--- a/semana1/projeto-portfólio/bodados-de-amor.html
+++ b/semana1/projeto-portfólio/bodados-de-amor.html
@@ -33,16 +33,31 @@
 
     <main>
         <section id="logo-bordado">
-            <img src="./imagens/logopng-bordadosdeamor.svg" alt="logo bordados de amor">
+            <img src="./imagens/logopng-bordadosdeamor.png" alt="logo bordados de amor">
         </section>
         <section id="conteudo-bordado">
             <img src="./imagens/pc-bordadosdeamor.jpg" alt="">
             <figure>
-                <a href="" target="_blank" rel="">
-                    <img src="" alt="">
+                <a href="./imagens/bodados-de-amor/index.PNG" target="_blank" rel="">
+                    <img src="./imagens/bodados-de-amor/index.PNG" alt="Pagina inicial do site">
                 </a>
-                <a href="" target="_blank" rel="">
-                    <img src="" alt="">
+                <a href="./imagens/bodados-de-amor/index.PNG" target="_blank">
+                    <img src="./imagens/bodados-de-amor/index.PNG" alt="Tela inicial do site">
+                </a>
+                <a href="./imagens/bodados-de-amor/ctrl-estoque.PNG" target="_blank">
+                    <img src="./imagens/bodados-de-amor/ctrl-estoque.PNG" alt="Página de controle de estoque">  
+                </a>
+                <a href="./imagens/bodados-de-amor/add-prod.PNG" target="_blank">
+                    <img src="./imagens/bodados-de-amor/add-prod.PNG" alt="Página para adicionar produtos">
+                </a>
+                <a href="./imagens/bodados-de-amor/funcionarios.PNG" target="_blank">
+                    <img src="./imagens/bodados-de-amor/funcionarios.PNG" alt="Página com lista de funcionário">
+                </a>
+                <a href="./imagens/bodados-de-amor/add-carrinho.PNG" target="_blank">
+                    <img src="./imagens/bodados-de-amor/add-carrinho.PNG" alt="Página para adicionar produto ao carrinho">
+                </a>
+                <a href="./imagens/bodados-de-amor/carrinho.PNG" target="_blank">
+                    <img src="./imagens/bodados-de-amor/carrinho.PNG" alt="Página que lista as comprasa">
                 </a>
             </figure>
             <div>
