--- a/semana1/projeto-portfólio/experiencias.html
+++ b/semana1/projeto-portfólio/experiencias.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projetos</title>
+    <title>Experiência</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <span>
@@ -32,11 +34,35 @@
     </header>
 
     <main>
+        <section id="titulo-exp">
+            <p class="tags tags-proj">&lt;h1&gt;</p>
+            <h1>Experiências</h1>
+            <p class="tags tags-proj"">&lt;/h1&gt;</p>
+        </section> 
+        <section id="conteudo-exp">
+            <div>
+                
+                <h2>Estudos</h2>
+                <h3>
+                    Ensino Médio: 
+                    <p></p>
+                </h3>
+                <h3>Graduação: </h3>
+                <h3>Cursos: </h3>
+            </div>
+            <div>
+                <h2>Empregadores</h2>
+                <h3></h3>
+                <h3></h3>
+            </div>
+        </section>
+
 
     </main>
 
-    <footer>
+    <footer class=" fixo">
         <p>rodapé</p>
     </footer>
 </body>
+
 </html>
