--- a/semana1/projeto-portfólio/projetos.html
+++ b/semana1/projeto-portfólio/projetos.html
@@ -45,7 +45,9 @@
         </figure>
     </main>
 
-    <footer class="fixo">
+    <footer class="fixo">#conteudo-dev figure img:hover{
+        width: 45%;
+    }
         <p>rodapé</p>
     </footer>
 </body>
