Terminei a página de eperiências

--- a/semana1/projeto-portfólio/experiencias.html
+++ b/semana1/projeto-portfólio/experiencias.html
@@ -39,22 +39,50 @@
             <h1>Experiências</h1>
             <p class="tags tags-proj"">&lt;/h1&gt;</p>
         </section> 
-        <section id="conteudo-exp">
-            <div>
-                
-                <h2>Estudos</h2>
-                <h3>
-                    Ensino Médio: 
-                    <p></p>
-                </h3>
-                <h3>Graduação: </h3>
-                <h3>Cursos: </h3>
-            </div>
-            <div>
-                <h2>Empregadores</h2>
-                <h3></h3>
-                <h3></h3>
-            </div>
+        <section id= "conteudo-exp">
+            <table>
+                <thead>
+                    <tr>
+                        <th> <img src="./imagens/estudando.png" alt="icon estudando"> </th>
+                        <th> <img src="./imagens/mala.png" alt="icon mala"> </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>ESTUDO</td>
+                        <td>TRABALHO</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p> <strong> E.T.E FAETEC</strong> (2016-2018):</p>
+                            <p> Ensino Médio e Técnico em informática. </p>
+                        </td>
+                        <td>
+                            <p> <strong>TID'S papelaria</strong>(2019-2020):</p>
+                            <p>Operadora de loja</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p> <strong>LABENU</strong> (2021 - Cursando):</p>
+                            <p> Curso de programação full stack. </p>
+                        </td>
+                        <td>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                           <p> <strong>Impulso Digital</strong> (2021 [30h]):</p>
+                            <p> Curso de aprendizado digital para impulsionar jovens para a tecnologia. </p>
+                        </td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+
         </section>
 
 
