--- a/semana1/projeto-portfólio/dev-finances.html
+++ b/semana1/projeto-portfólio/dev-finances.html
@@ -47,7 +47,7 @@
                 </a>
             </figure>
             <div>
-               <a href="./projetos.html"> <button id="botao-voltar">Voltar</button> </a>
+               <a href="./projetos.html"> <button class="botao-azul">Voltar</button> </a>
             </div>
         </section>
     </main>
