Preenchi o sobre-mim

--- a/semana1/projeto-portfólio/sobre-mim.html
+++ b/semana1/projeto-portfólio/sobre-mim.html
@@ -44,10 +44,53 @@
             </h1>
             <p class="tags" id="tagsfh2">&lt;/h2&gt;</p>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore repellendus suscipit modi quod natus
-                earum recusandae. Error, culpa possimus! Necessitatibus molestiae quasi esse iusto veniam voluptates
-                adipisci maiores sint beatae!
+                <strong>Meu primeiro contato o mundo do desenvolvimento foi aos 15 anos. </strong> Foi no meu ensino
+                médio, onde fiz um técnico onde meu primeiro contato foi Java. Me apaixonei ali mesmo, com o meu "olá
+                mundo" aparecendo na tela eu sabia que era aquilo que eu queria.
             </p>
+            <p>
+                Havia me afastado assim que terminei o ensino médio, mas voltei a buscar a área que sou apaixonada no
+                final de 2020, quando fui demitida do meu antigo emprego e entrei em um projeto de 2 semanas de impulso
+                digital.
+            </p>
+            <p>
+                Hoje, estou estudando na Labenu e melhorando a cada dia.
+            </p>
+            <div>
+                <table>
+                    <thead>
+                        <tr>
+                            <th><img src="./imagens/icon-softskills.png" alt="icon softskills"></th>
+                            <th><img src="./imagens/icon-hardskills.png" alt="icon hardskills"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr id="titulo">
+                            <td>Softskills</td>
+                            <td>Hardskills</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <ul>
+                                    <li>Colaboração</li>
+                                    <li>Fexibilidade</li>
+                                    <li>Empatia</li>
+                                    <li>Comunicação</li>
+                                </ul>
+
+                            </td>
+                            <td>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>PYTHON</li>
+                                </ul>
+
+                            </td>
+                        </tr>
+                    </tbody>
+                </div>
+            </table>
         </section>
         <section>
             <p class="tags" id="tagimg">&lt;img&gt;</p>
