--- a/semana1/projeto-portfólio/dev-finances.html
+++ b/semana1/projeto-portfólio/dev-finances.html
@@ -10,14 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="sortcut icon" href="./imagens/boneca-home.png" type="image/png" />
+
 </head>
 
 <body>
     <header>
         <span>
-            <a href="index.html">Home</a>
+            <a href="index.html">Início</a>
             <a href="sobre-mim.html">Sobre</a>
-            <a href="experiencias.html">Experiências</a>
+            <a href="experiencias.html">Experiência</a>
             <a href="contato.html">Contato</a>
         </span>
         <picture>
