--- a/semana1/projeto-portfólio/index.html
+++ b/semana1/projeto-portfólio/index.html
@@ -10,12 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="sortcut icon" href="./imagens/boneca-home.png" type="image/png" />
 </head>
 
 <body id="body-principal">
     <header>
         <span>
-            <a href="index.html">Home</a>
+            <a href="index.html">Início</a>
             <a href="sobre-mim.html">Sobre</a>
             <a href="experiencias.html">Experiências</a>
             <a href="projetos.html">Projetos</a>
@@ -79,7 +80,7 @@
             <span class="tags">&lt;/h1&gt;</span>
             <h2 id="subtitulo">DESENVOLVEDORA FRONT-END</h2>
             <div>
-                <a href="sobre-mim.html"><button id="botao-index">SOBRE MIM</button></a>
+                <a href="sobre-mim.html"><button class="botao-azul" id="botao-index">SOBRE MIM</button></a>
             </div>
         </section>
 
