--- a/semana1/projeto-portfólio/sobre-mim.html
+++ b/semana1/projeto-portfólio/sobre-mim.html
@@ -10,12 +10,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;500;600;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="sortcut icon" href="./imagens/boneca-home.png" type="image/png" />
 </head>
 
 <body id="body-sobre-mim">
     <header>
         <span>
-            <a href="index.html">Home</a>
+            <a href="index.html">Início</a>
             <a href="experiencias.html">Experiências</a>
             <a href="projetos.html">Projetos</a>
             <a href="contato.html">Contato</a>
@@ -91,6 +92,10 @@
                     </tbody>
                 </div>
             </table>
+            <div  id="botao-sobre-mim">
+               <a href="./index.html"> <button class="botao-azul">Voltar</button></a>
+            </div>
+            
         </section>
         <section>
             <p class="tags" id="tagimg">&lt;img&gt;</p>
