Adicionei interação na home

--- a/semana1/projeto-portfólio/index.html
+++ b/semana1/projeto-portfólio/index.html
@@ -18,7 +18,7 @@
         <span>
             <a href="index.html">Início</a>
             <a href="sobre-mim.html">Sobre</a>
-            <a href="experiencias.html">Experiências</a>
+            <a href="experiencias.html">Experiência</a>
             <a href="projetos.html">Projetos</a>
             <a href="contato.html">Contato</a>
         </span>
@@ -73,9 +73,16 @@
             <p class="tags" id="tag-h1">&lt;h1&gt;</p>
 
             <h1>
-                <p>Olá,</p>
-                <p>Sou a</p>
-                <p>Adryane</p>
+                </p>
+                <p>
+                    <span>O</span><span>l</span><span>á</span><span>,</span>
+                </p>
+                <p>
+                <span>S</span><span>o</span><span>u</span> <span>a</span>
+                </p>
+                <p>
+                    <span>A</span><span>d</span><span>r</span><span>y</span><span>a</span><span>n</span><span>e</span>
+                </p>
             </h1>
             <span class="tags">&lt;/h1&gt;</span>
             <h2 id="subtitulo">DESENVOLVEDORA FRONT-END</h2>
