--- a/semana1/projeto-portfólio/projetos.html
+++ b/semana1/projeto-portfólio/projetos.html
@@ -19,7 +19,7 @@
         <span>
             <a href="index.html">Início</a>
             <a href="sobre-mim.html">Sobre</a>
-            <a href="experiencias.html">Experiências</a>
+            <a href="experiencias.html">Experiência</a>
             <a href="contato.html">Contato</a>
         </span>
         <picture>
