--- a/semana1/projeto-portfólio/sobre-mim.html
+++ b/semana1/projeto-portfólio/sobre-mim.html
@@ -17,7 +17,7 @@
     <header>
         <span>
             <a href="index.html">Início</a>
-            <a href="experiencias.html">Experiências</a>
+            <a href="experiencias.html">Experiência</a>
             <a href="projetos.html">Projetos</a>
             <a href="contato.html">Contato</a>
         </span>
