Concertei o erro na pag projetos

--- a/semana1/projeto-portfólio/projetos.html
+++ b/semana1/projeto-portfólio/projetos.html
@@ -47,9 +47,7 @@
         </figure>
     </main>
 
-    <footer class="fixo">#conteudo-dev figure img:hover{
-        width: 45%;
-    }
+    <footer class="fixo">
         <p>rodapé</p>
     </footer>
 </body>
