Botão de pesquisa 'funcional'

--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -17,9 +17,9 @@
         <p>LabeTube</p>
         <form action="">
             <input type="search" name="pesquisa" id="pesquisa">
-        
-                <a href=""><img src="./imagens/lupa.png" alt="icone de lupa"></a>
-            
+            <button>
+            <a href=""><img src="./imagens/lupa.png" alt="icone de lupa"></a>
+         </button>
         </form>
     </header>
     <main>
