Video1 totalmente pronto

--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -27,7 +27,7 @@
             <a href="./video1.html">
                 <div class="card-video">
                     <video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4"></video>
-                    <p>TITULO</p>
+                    <p>As belezas da Irlanda</p>
                 </div>
             </a>
             <div class="card-video">
