--- a/semana2/aula8/video1.html
+++ b/semana2/aula8/video1.html
@@ -23,7 +23,7 @@
 
     <main class="main-video">
         <div>
-            <h1>Video 1</h1>
+            <h1>As belezas da Irlanda</h1>
             <video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4" controls></video>
         </div>
         <a href="./index.html">
