--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -18,26 +18,30 @@
         <form action="">
             <input type="search" name="pesquisa" id="pesquisa">
             <button>
-            <a href=""><img src="./imagens/lupa.png" alt="icone de lupa"></a>
-         </button>
+                <a href=""><img src="./imagens/lupa.png" alt="icone de lupa"></a>
+            </button>
         </form>
     </header>
     <main>
         <section class="card">
-            <a href="./video1.html">
+            <a href="video1.html">
                 <div class="card-video">
                     <video src="https://storage.googleapis.com/future-apis.appspot.com/1.mp4"></video>
                     <p>As belezas da Irlanda</p>
                 </div>
             </a>
-            <div class="card-video">
-                <video src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4"></video>
-                <p>TITULO</p>
-            </div>
-            <div class="card-video">
-                <video src="https://storage.googleapis.com/future-apis.appspot.com/3.mp4"></video>
-                <p>TITULO</p>
-            </div>
+            <a href="video2.html">
+                <div class="card-video">
+                    <video src="https://storage.googleapis.com/future-apis.appspot.com/2.mp4"></video>
+                    <p>Hemácias do sangue</p>
+                </div>
+            </a>
+            <a href="video3.html">
+                <div class="card-video">
+                    <video src="https://storage.googleapis.com/future-apis.appspot.com/3.mp4"></video>
+                    <p>TITULO</p>
+                </div>
+            </a>
             <div class="card-video">
                 <video src="https://storage.googleapis.com/future-apis.appspot.com/4.mp4"></video>
                 <p>TITULO</p>
