--- a/semana2/aula8/index.html
+++ b/semana2/aula8/index.html
@@ -39,7 +39,7 @@
             <a href="video3.html">
                 <div class="card-video">
                     <video src="https://storage.googleapis.com/future-apis.appspot.com/3.mp4"></video>
-                    <p>TITULO</p>
+                    <p>Tinta</p>
                 </div>
             </a>
             <div class="card-video">
